...
            .accessibility(identifier: "SaveAvatarButton")
            
            Button(action: getMyProfile) {
                Text("Get my profile")
                    .modifier(MainRoundedButton(backgroundColor: Color.blue))
            }
            .accessibility(identifier: "GetMyProfileButton")
            
            Button(action: logoutButtonTapped) {
                Text("Log out")
                    .modifier(MainRoundedButton(backgroundColor: Color.red))
            }
            .accessibility(identifier: "LogOutButton")
            
            Button(action: deleteAccountButtonTapped) {
                Text("Delete Account")
                    .modifier(MainRoundedButton(backgroundColor: Color.purple))
            }
            .accessibility(identifier: "DeleteAccountButton")
...
